# demo_romeo_door

./: CMakeLists.txt  README.md  package.xml
data/: offset_pose.xml
launch/: demo_romeo_door.launch
src/: demo_romeo_robot_door.cpp  demo_romeo_robot_door.h  main.cpp
